--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -23,10 +23,19 @@ html {
 4. Kiểu dáng
 */
 
+.clear {
+    clear: both;  /*Dùng để clear float */
+}
+
+.text-white {
+    color: white!important;
+}
+
 #main {
 
 }
 
+/* Header */
 #header {
     height: 46px;
     background-color: black;
@@ -37,6 +46,7 @@ html {
     z-index: 1;
 }
 
+/* Navbar */
 #nav {
     display: inline-block;
 }
@@ -96,6 +106,7 @@ html {
     line-height: 38px;
 }
 
+/* Search Btn */
 #header .search-btn {
     float: right;
     padding: 0 21px;
@@ -112,6 +123,7 @@ html {
     line-height: 46px;
 }
 
+/* Slider */
 #slider {
     position: relative;
     margin-top: 46px;
@@ -140,8 +152,83 @@ html {
     margin-top: 25px;
 }
 
+/* Content */
 #content {
 
+}
+
+#content .content-section {
+    width: 800px;
+    padding: 64px 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#content .section-heading {
+    font-size: 30px;
+    font-weight: 500px;
+    text-align: center;
+    letter-spacing: 4px;
+}
+
+#content .section-sub-heading {
+    font-size: 15px;
+    text-align: center;
+    margin-top: 25px;
+    font-style: italic;
+    opacity: 0.6;
+}
+
+/* About */
+#content .about-text {
+    margin-top: 25px;
+    font-size: 15px;
+    text-align: justify;
+    line-height: 1.4;  /* 1.4 cho tiếng anh và 1.6 cho tiếng việt */
+}
+
+#content .member-list {
+    margin-top: 48px;
+}
+
+#content .member-item {
+    float: left;
+    width: calc(100%/3);
+    text-align: center;
+}
+
+#content .member-name {
+    font-size: 15px;
+}
+
+#content .member-img {
+    width: 154px;
+    margin-top: 15px;
+    border-radius: 4px;
+}
+
+/* Tour Date */
+.tour-section {
+    background-color: black;
+}
+
+.tickets-list {
+    background-color: #fff;
+    margin-top: 40px;
+}
+
+.tickets-list li {
+    font-size: 15px;
+    padding: 11px 16px;
+    border-bottom: 1px solid #ddd;
+}
+
+.tickets-list .sold-out {
+
+}
+
+.tickets-list .quantity {
+    
 }
 
 #footer {
