--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -210,11 +210,14 @@ html {
 /* Tour Date */
 .tour-section {
     background-color: black;
+    
 }
 
+/* Ticket */
 .tickets-list {
     background-color: #fff;
     margin-top: 40px;
+    list-style: none;
 }
 
 .tickets-list li {
@@ -224,12 +227,59 @@ html {
 }
 
 .tickets-list .sold-out {
-
+    background: #f44336;
+    color: #fff;
+    padding: 3px 4px;
+    margin-left: 16px;
 }
 
 .tickets-list .quantity {
+    float: right;
+    width: 24px;
+    height: 24px;
+    background-color: #000;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 24px;
+    margin-top: -3px;
+}
+
+/*Place */
+.places-list {
+    margin-top: 48px;
     
 }
+
+.place-item {
+    float: left;
+    width: 33,333333%;
+}
+
+.place-img {
+    width: 100%;
+}
+
+.place-body {
+
+}
+
+.place-heading {
+
+}
+
+.place-time {
+
+}
+
+.place-desc {
+
+}
+
+.place-buy-ticket {
+
+}
+
 
 #footer {
 
