--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -247,40 +247,126 @@ html {
 
 /*Place */
 .places-list {
-    margin-top: 48px;
-    
+    margin: 32px -8px;
+    padding-bottom: 48px;
 }
 
 .place-item {
     float: left;
-    width: 33,333333%;
+    width: 33.333%;
+    padding: 0 8px;
 }
 
 .place-img {
     width: 100%;
 }
 
-.place-body {
+.place-img:hover {
+    opacity: 0.8;
+}
 
+.place-body {
+    background-color: #fff;
+    padding: 16px;
+    font-size: 15px;
 }
 
 .place-heading {
-
+    font-weight: 600px;
+    font-size: 15px;
 }
 
 .place-time {
-
+    margin-top: 15px;
+    color: #757575;
 }
 
 .place-desc {
-
+    margin-top: 15px;
+    line-height: 1.4;
 }
 
 .place-buy-ticket {
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    padding: 11px 16px;
+    display: inline-block;
+    margin-top: 15px;
+}
 
+.place-buy-ticket:hover {
+    color: #000;
+    background-color: #ccc;
 }
 
 
 #footer {
 
+}
+
+.model {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.model-container {
+    background-color: #fff;
+    width: 900px;
+    min-height: 200px;
+    position: relative;
+}
+
+.model-header {
+    background-color: #009688;
+    height: 130px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    color: #fff;
+}
+
+.model-close {
+    position: absolute;
+    color: #fff;
+    top: 0;
+    right: 0;
+    padding: 12px;
+}
+
+.model-close :hover {
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+.model-header-icon {
+    margin-right: 16px;
+}
+
+.model-body {
+    padding: 16px;
+}
+
+.model-label {
+    display: block;
+    color: #000;
+    font-weight: 500px;
+    font-size: 15px;
+    margin-bottom: 12px;
+}
+
+.model-input {
+    border: 1px solid #ccc;
+    width: 100%;
+    padding: 10px;
+    font-size: 15px;
+    margin-bottom: 24px;
 }
