--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -312,15 +312,20 @@ html {
     right: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.4);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
+}
+
+.model.open {
+    display: flex;
 }
 
 .model-container {
     background-color: #fff;
     width: 900px;
     min-height: 200px;
+    max-width: calc(100% - 32px);
     position: relative;
 }
 
@@ -369,4 +374,29 @@ html {
     padding: 10px;
     font-size: 15px;
     margin-bottom: 24px;
+}
+
+#buy-tickets {
+    background-color: #009688;
+    border: none;
+    color: #fff;
+    width: 100%;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding: 18px;
+    cursor: pointer;
+}
+
+#buy-tickets :hover {
+    opacity: 0.5;
+}
+
+.model-footer {
+    padding: 16px;
+    text-align: right;
+
+}
+
+.model-footer a {
+    color: #2196f3;
 }
