--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -23,6 +23,7 @@ html {
 4. Kiểu dáng
 */
 
+/* Common */
 .clear {
     clear: both;  /*Dùng để clear float */
 }
@@ -31,6 +32,48 @@ html {
     color: white!important;
 }
 
+.text-center {
+    text-align: center !important;
+}
+
+.mt-8 {
+    margin-top: 8px!important;
+}
+
+.mt-16 {
+    margin-top: 16px!important;
+}
+
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+.row::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.col {
+    float: left;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.triple-col {
+    width: calc(100%/3);
+}
+
+.half-col {
+    width: calc(100%/2);
+}
+
+.full-col {
+    width: 100%;
+}
+
+/* Main */
 #main {
 
 }
@@ -191,11 +234,6 @@ html {
     margin-top: 48px;
 }
 
-#content .member-item {
-    float: left;
-    width: calc(100%/3);
-    text-align: center;
-}
 
 #content .member-name {
     font-size: 15px;
@@ -247,15 +285,10 @@ html {
 
 /*Place */
 .places-list {
-    margin: 32px -8px;
+    margin-top: 32px;
     padding-bottom: 48px;
 }
 
-.place-item {
-    float: left;
-    width: 33.333%;
-    padding: 0 8px;
-}
 
 .place-img {
     width: 100%;
@@ -300,7 +333,32 @@ html {
     background-color: #ccc;
 }
 
+/* Contact Form */
+.contact-content {
+    margin-top: 48px;
+}
 
+.contact-info {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.contact-info i[class*= "ti-"] {
+    width: 30px;
+    display: inline-block;
+} 
+
+.contact-form {
+    font-size: 15px;
+}
+
+.contact-form .form-control {
+    padding: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+/* Footer */
 #footer {
 
 }
@@ -327,6 +385,7 @@ html {
     min-height: 200px;
     max-width: calc(100% - 32px);
     position: relative;
+    animation: modelFadeIn ease 0.5s;
 }
 
 .model-header {
@@ -399,4 +458,16 @@ html {
 
 .model-footer a {
     color: #2196f3;
+}
+
+@keyframes modelFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-140px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
