--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -202,16 +202,17 @@ html {
 
 #content .content-section {
     width: 800px;
-    padding: 64px 0;
+    padding: 64px 0 112px;
     margin-left: auto;
     margin-right: auto;
 }
 
 #content .section-heading {
     font-size: 30px;
-    font-weight: 500px;
+    font-weight: 100;
     text-align: center;
     letter-spacing: 4px;
+    text-transform: uppercase;
 }
 
 #content .section-sub-heading {
@@ -286,7 +287,6 @@ html {
 /*Place */
 .places-list {
     margin-top: 32px;
-    padding-bottom: 48px;
 }
 
 
@@ -326,6 +326,7 @@ html {
     padding: 11px 16px;
     display: inline-block;
     margin-top: 15px;
+    border: none;
 }
 
 .place-buy-ticket:hover {
@@ -358,9 +359,55 @@ html {
     width: 100%;
 }
 
+.contact-form .form-submit-btn {
+    background-color: #000;
+    color: #fff;
+    padding: 10px 16px;
+    float: right;
+    border: none;
+}
+
+.contact-form .form-submit-btn:hover {
+    color: #000;
+    background-color: #ccc;
+    cursor: pointer;
+}
+
+/* Map */
+.map-section img {
+    width: 100%;
+}
+
 /* Footer */
 #footer {
+    padding: 64px 16px;
+    text-align: center;
+}
 
+#footer .socials-list {
+    font-size: 24px;
+}
+
+#footer .socials-list a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+#footer .socials-list a :hover {
+    color: rgba(0, 0, 0, 0.4);
+}
+
+#footer .copyright {
+    margin-top: 15px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+#footer .copyright a {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+#footer .copyright a:hover {
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .model {
