--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -6,6 +6,7 @@
 }
 
 html {
+    scroll-behavior: smooth;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -171,7 +172,7 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;  /* padding top là giá trị % thì sẽ bằng % của chiều ngang chính nó */
-    background: url('/W3_band/assets/img/imagine_dragons_summer_2022_1280x720_1648149163.jpeg') top center/cover no-repeat;
+    background: url('/HTML-CSS/W3_band/assets/img/imagine_dragons_summer_2022_1280x720_1648149163.jpeg') top center/cover no-repeat;
 }
 
 #slider .text-content {
