--- a/Grid_library/grid.css
+++ b/Grid_library/grid.css
@@ -9,16 +9,51 @@
     margin: 0 auto;
 }
 
-/* PC Lowry solution screen */
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -4px;
+    margin-right: -4px;
+}
+
+.col {
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+
+
+/* > PC low resolution */
 @media (min-width: 1024px) and (max-width: 1239px) {
     .wide {
         width: 984px;
     }
+    .wide .row {
+        margin-left: -12px;
+        margin-right: -12px;
+    }
+}
+
+/* PC low resolution > */
+@media (min-width: 1113px) {
+    .row {
+        margin-left: -12px;
+        margin-right: -12px;
+    }
 }
 
 /* Tablet and PC Lowry solution */
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 740px) and (max-width: 1023px) {
     .wide {
         width: 644px;
+    }
+}
+
+/* > Tablet */
+@media (min-width: 740px) {
+    .row {
+        margin-left: -8px;
+        margin-right: -8px;
     }
 }
