--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -172,7 +172,7 @@ html {
     position: relative;
     margin-top: 46px;
     padding-top: 50%;  /* padding top là giá trị % thì sẽ bằng % của chiều ngang chính nó */
-    background: url('/HTML-CSS/W3_band/assets/img/imagine_dragons_summer_2022_1280x720_1648149163.jpeg') top center/cover no-repeat;
+    background: url('../img/imagine_dragons_summer_2022_1280x720_1648149163.jpeg') top center/cover no-repeat;
 }
 
 #slider .text-content {
@@ -203,9 +203,13 @@ html {
 
 #content .content-section {
     width: 800px;
+    max-width: 100%;
     padding: 64px 0 112px;
     margin-left: auto;
     margin-right: auto;
+    padding-left: 16px;
+    padding-right: 16px;
+
 }
 
 #content .section-heading {
