--- a/W3_band/assets/css/responsive.css
+++ b/W3_band/assets/css/responsive.css
@@ -17,8 +17,27 @@
     #nav > li {
         display: block;
     }
+
     #nav > li:first-child {
         display: inline-block;
+    }
+
+    #nav li a {
+        padding: 1px 24px;
+    }
+
+    #nav .subnav {
+        position: initial;
+        background-color: #333;
+    }
+
+    #nav .subnav a {
+        color: #fff;
+        padding: 5px 41px;
+    }
+
+    #header {
+        overflow: hidden;
     }
 
     #header .search-btn {
