--- a/W3_band/assets/css/style.css
+++ b/W3_band/assets/css/style.css
@@ -45,6 +45,10 @@ html {
     margin-top: 16px!important;
 }
 
+.mt-32 {
+    margin-top: 32px!important;
+}
+
 .row {
     margin-left: -8px;
     margin-right: -8px;
@@ -254,7 +258,7 @@ html {
 }
 
 #content .member-list {
-    margin-top: 48px;
+    margin-top: 32px;
 }
 
 
@@ -308,7 +312,7 @@ html {
 
 /*Place */
 .places-list {
-    margin-top: 32px;
+    margin-top: 16px;
 }
 
 
@@ -349,6 +353,7 @@ html {
     display: inline-block;
     margin-top: 15px;
     border: none;
+    text-align: center;
 }
 
 .place-buy-ticket:hover {
